--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.2.0",
     "@vercel/speed-insights": "^1.0.9",
     "framer-motion": "^11.0.3",
     "react": "18.2.0",
